// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blurb should extract content from html elements 1`] = `
<span
  dangerouslySetInnerHTML={
    Object {
      "__html": "Don't panic! Time is an illusion. Would it save you a lot of time if I just gave up and went mad now? The ships hung in the sky in much the same way that bricks don't.",
    }
  }
/>
`;

exports[`Blurb should extract content from plain text 1`] = `
<span
  dangerouslySetInnerHTML={
    Object {
      "__html": "The ships hung in the sky in much the same way that bricks don't.",
    }
  }
/>
`;

exports[`Blurb should forcibly limit words extracted from html elements 1`] = `
<span
  dangerouslySetInnerHTML={
    Object {
      "__html": "1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50...",
    }
  }
/>
`;

exports[`Blurb should forcibly limit words extracted from plain text 1`] = `
<span
  dangerouslySetInnerHTML={
    Object {
      "__html": "1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50...",
    }
  }
/>
`;

exports[`Blurb should limit words extracted from html elements 1`] = `
<span
  dangerouslySetInnerHTML={
    Object {
      "__html": "Don't panic! Time is an illusion....",
    }
  }
/>
`;

exports[`Blurb should limit words extracted from plain text 1`] = `
<span
  dangerouslySetInnerHTML={
    Object {
      "__html": "The ships hung in the sky...",
    }
  }
/>
`;
